listings/ch03-common-programming-concepts/no-listing-05-mut-cant-change-types/output.txt
$ cargo run
   Compiling variables v0.1.0 (file:///projects/variables)
error[E0308]: mismatched types          (型が合いません)
 --> src/main.rs:3:14
  |
2 |     let mut spaces = "   ";
  |                      ----- expected due to this value
3 |     spaces = spaces.len();
  |              ^^^^^^^^^^^^ expected `&str`, found `usize`
  |                           (&str型を予期しましたが、usizeが見つかりました)

For more information about this error, try `rustc --explain E0308`.
error: could not compile `variables` due to previous error
